Got connected to thingsboard

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "main.cpp"
                        INCLUDE_DIRS "."
-                       REQUIRES esp_wifi esp_event nvs_flash driver)
-set(COMPONENT_EMBED_TXTFILES certs/whitetail.pem)
+                       REQUIRES esp_wifi esp_event nvs_flash driver
+                       EMBED_TXTFILES ${project_dir}/certs/whitetail.pem)
